--- a/prueba.html
+++ b/prueba.html
@@ -9,6 +9,7 @@
 <body>
     <div>
         <span>Hola, primer comentario de la página</span>
+        <span>Segundo mensaje</span>
     </div>
 </body>
 </html>
